...
                    ),
                    Align(
                      alignment: Alignment.centerRight,
                      child: Consumer<SaveCustomerController>(
                        builder: (context, controller, child) {
                          return ElevatedButton.icon(
                            key: const ValueKey('submitButton'),
                            onPressed: controller.isButtonLoading
                                ? null
                                : () => controller.onTapSubmit(context),
                            icon: const Icon(Icons.chevron_right),
                            label: Text(
                              controller.page == 0 ? 'Next' : 'Save',
...
